cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
    CloudFormation Template for Roman Numerals Converter Application. 
    This template creates Python Flask Web Application on Amazon Linux 2023  
    EC2 Instance with custom security group allowing http connections on port 80, 8080 and SSH connection on port 22. 
    Roman Numerals Converter Application is downloaded from Github repository, then installed on Flask.

Parameters:
ServerKeyName:
  Description: Enter the name of your keyname.
  Type: AWS::EC2::KeyPair::KeyName

LatestAmiId:
  Description: 
  Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
  Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'

Resources:
ServerSecurityGroup:
  Type: AWS::EC2::SecurityGroup
  Properties:
    GroupDescription: Enable HTTP for Flask Web Server and SSH port to secure reach to my EC2
    SecurityGroupEgress: 
      SecurityGroupEgress
    SecurityGroupIngress: 
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: 0.0.0.0/0
MyWebServer:
  Type: AWS::EC2::Instance
  Properties:
    ImageId: !Ref LatestAmiId
    InstanceType: t2.micro
    KeyName: !Ref ServerKeyName
    SecurityGroupIds: 
      - !Ref ServerSecurityGroup
    Tags: 
      - Key: Name
        Value: !Sub Web Server of ${AWS::StackName} Stack
    UserData: !Base64 |
      #! /bin/bash
      dnf update -y
      dnf install python3 -y
      dnf install python3-pip -y
      dnf install git -y
      pip3 install flask
      FOLDER="https://raw.githubusercontent.com/devopswizard/roman-numbers-aws-CFN/main"
      cd /home/ec2-user
      wget -P templates ${FOLDER}/templates/index.html
      wget -P templates ${FOLDER}/templates/result.html
      wget ${FOLDER}/roman-numerals-converter-app.py
      python3 roman-numerals-converter-app.py
  
Outputs: 
  WebSiteAddress:
    Value: !Sub
      - http://${PublicIpAddress}
      - PublicIpAddress: !GetAtt MyWebServer.PublicDnsName
